clean up code in main.js and add system tray functionality

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"inputValue":"Focusrite Usb Audio","outputValue":"THX Spatial Audio"}
+{"inputValue":"VB-Audio Cable B","outputValue":"VB-Audio VoiceMeeter AUX VAIO"}
