changed filterDeviceData to create objects with command line friendly versions of device names

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"inputValue":"VB-Audio Cable B","outputValue":"VB-Audio VoiceMeeter AUX VAIO"}
+{"inputValue":"VB-Audio Cable A","outputValue":"VB-Audio Cable B"}
