--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"inputValue":"VB-Audio Cable A","outputValue":"VB-Audio Cable B"}
+{"inputValue":"VB-Audio Cable A\\Device\\CABLE-A Output\\Capture","outputValue":"VB-Audio VoiceMeeter VAIO\\Device\\VoiceMeeter Input\\Render"}
