several updates, almost ready to be built. Need to fix device names

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"inputValue":"VB-Audio Cable A\\Device\\CABLE-A Output\\Capture","outputValue":"VB-Audio VoiceMeeter VAIO\\Device\\VoiceMeeter Input\\Render"}
+{"inputValue":"VB-Audio VoiceMeeter AUX VAIO\\Device\\VoiceMeeter Aux Output\\Capture","outputValue":""}
